tests/semantic/invalid/scope_errors/test1.src
fn foo() -> int {
    return true;
}

fn main() -> int {
    int x = foo();
    return x;
}
